Clean up whitespace in application.js so it looks clearer, fix divs declared within loops so they don't get created multiple times, trying to create a line between each comment to separate them

--- a/skeleton/public/css/application.css
+++ b/skeleton/public/css/application.css
@@ -5,3 +5,7 @@
 #question-comment-form {
   display: none;
 }
+
+#q_comment {
+  border-bottom: 2px black solid;
+}
